--- a/static/sass/Player/Player.sass
+++ b/static/sass/Player/Player.sass
@@ -107,6 +107,8 @@
 		right: 0rem
 		transition: 0.3s linear 
 		transform: translateX(0)
+		height: $phone-footer-height
+		top: 0
 
 		.previous-song-icon
 			transform: rotate(180deg)
@@ -167,6 +169,8 @@
 		.player-controls--wrapper
 			transition: none
 			position: relative
+			height: inherit
+			top: inherit
 
 			.player-button
 				height: 2rem
